--- a/crud/views/add.ejs
+++ b/crud/views/add.ejs
@@ -7,7 +7,7 @@
     <title>Add</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="postdata" method="post">
         <input type="text" name="add-text">
         <input type="submit" value="Add">
     </form>
