--- a/crud/views/edit.ejs
+++ b/crud/views/edit.ejs
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/css/style.css">
     <title>Edit</title>
 </head>
 <body>
     <form action="" method="post">
-        <input type="text" name="old-text" placeholder="Old text">
-        <input type="text" name="new-text" placeholder="New Text">
+        Email:<input type="text" name="email" placeholder="Email">
+        Old Password:<input type="password" name="old-password">
+        New Password:<input type="password" name="new-password">
         <input type="submit" value="update" name="update">
-        <input type="submit" value="delete" name="delete">
 
     </form>
 </body>
