--- a/crud/views/add.ejs
+++ b/crud/views/add.ejs
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/css/style.css">
     <title>Add</title>
 </head>
 <body>
     <form action="" method="post">
-        <input type="text" name="add-text">
+        Name:<input type="text" name="name">
+        Email:<input type="email" name="email">
+        Password:<input type="password" name="password">
         <input type="submit" value="Add">
     </form>
 </body>
