--- a/crud/views/read.ejs
+++ b/crud/views/read.ejs
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/css/style.css">
     <title>Read</title>
 </head>
 <body>
-    <p class="read"></p>
+    <p class=""></p>
 </body>
 </html>
