--- a/crud/views/add.ejs
+++ b/crud/views/add.ejs
@@ -8,10 +8,11 @@
     <title>Add</title>
 </head>
 <body>
-    <form action="postdata" method="post">
+    <form action="add" method="post">
         Name:<input type="text" name="name">
         Email:<input type="email" name="email">
         Password:<input type="password" name="password">
+        <input type="submit" value="submit">
     </form>
 </body>
 </html>
