--- a/crud/views/update.ejs
+++ b/crud/views/update.ejs
@@ -8,11 +8,11 @@
     <title>Edit</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="update" method="post">
         Email:<input type="text" name="email" placeholder="Email">
-        Old Password:<input type="password" name="old-password">
-        New Password:<input type="password" name="new-password">
-        <input type="submit" value="update" name="update">
+        <!-- Old Password:<input type="password" name="old-password"> -->
+        New Password:<input type="password" name="password">
+        <input type="submit" value="submit" >
 
     </form>
 </body>
