--- a/crud/views/add.ejs
+++ b/crud/views/add.ejs
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style.css">
-    <title>Add</title>
-</head>
-<body>
+<%- include('include/header'); %>
     <form action="add" method="post">
-        Name:<input type="text" name="name">
-        Email:<input type="email" name="email">
-        Password:<input type="password" name="password">
-        <input type="submit" value="submit">
+        <div>
+            <label for="">Name</label>
+            <input type="text" name="name">
+        </div>
+        <div>
+            <label for="">Email</label>
+            <input type="email" name="email">
+        </div>
+        <div>
+            <label for="">Password</label>
+            <input type="password" name="password">
+        </div>
+        <div>
+            <input type="submit" value="submit">
+        </div>
     </form>
 </body>
 </html>
