--- a/crud/views/read.ejs
+++ b/crud/views/read.ejs
@@ -4,7 +4,7 @@
             <th>Id</th>
             <th>Name</th>
             <th>Email</th>
-            <th>Update</th>
+            <th>Actions</th>
         </thead>
         <tbody>
             <% for(let user of locals.userData){ %>
@@ -27,5 +27,8 @@
                 <% } %>
         </tbody>
     </table>
+    <div class="add-button">
+        <a href="http://localhost:8080/users/add/">Add</a>
+    </div>
 </body>
 </html>
