--- a/crud/views/update.ejs
+++ b/crud/views/update.ejs
@@ -1,5 +1,5 @@
 <%- include('include/header'); %>
-    <form action="users/update/<%=userData._id%>" method="POST">
+    <form action="/users/update/<%=userData._id%>" method="POST">
         <div>
             <label for="">Name</label>
             <input type="text" name="name" placeholder="Name" value="<%=userData.name%>">
